--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -5,6 +5,9 @@ on:
     types: [opened, synchronize, edited]
     branches: [main]
 
+permissions:  # added using https://github.com/step-security/secure-repo
+  contents: read
+
 jobs:
   ai-title-review:
     permissions:
@@ -15,7 +18,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Harden Runner
+        uses: step-security/harden-runner@002fdce3c6a235733a90a27c80493a3241e56863 # v2.12.1
+        with:
+          egress-policy: audit
+
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
           filter: blob:none
@@ -81,23 +89,10 @@ jobs:
       - name: AI PR Title Analysis
         if: steps.actor.outputs.is_repo_dev == 'true'
         id: ai-title-analysis
-        uses: actions/ai-inference@v1
+        uses: actions/ai-inference@d645f067d89ee1d5d736a5990e327e504d1c5a4a # v1.1.0
         with:
           model: openai/gpt-4o
-          system-prompt: |
-            You are a professional software engineer specializing in reviewing pull request titles.
-
-            Your job is to analyze a git diff and an existing PR title, then evaluate and improve the PR title.
-
-            You must:
-            - Always return valid JSON
-            - Only return the JSON response (no Markdown, no formatting)
-            - Use one of these conventional commit types at the beginning of the title: build, chore, ci, docs, feat, fix, perf, refactor, revert, style, test
-            - Use lowercase only, no emojis, no trailing period
-            - Ensure the title is between 5 and 72 printable ASCII characters
-            - Never let spelling or grammar errors affect the rating
-            - If the PR title is rated 6 or higher and only contains spelling or grammar mistakes, correct it — do not rephrase it
-            - If the PR title is rated below 6, generate a new, better title based on the diff
+          system-prompt-file: ".github/config/system-prompt.txt"
           prompt: |
             Based on the following input data:
 
@@ -162,7 +157,7 @@ jobs:
 
       - name: Post comment on PR if needed
         if: steps.actor.outputs.is_repo_dev == 'true'
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         with:
           github-token: ${{ steps.setup-bot.outputs.token }}
           script: |
