--- a/.github/workflows/Label-PRs.yml
+++ b/.github/workflows/Label-PRs.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Checkout your code
-        uses: actions/checkout@v3
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
 
       - name: Setup GitHub App Bot
         id: setup-bot
@@ -18,7 +18,7 @@ jobs:
           app-id: ${{ vars.GH_APP_ID }}
           private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
 
-      - uses: srvaroa/labeler@master
+      - uses: srvaroa/labeler@e7bef2249506ba9cbbd3ca5cee256abd9f930b04 # master
         with:
           config_path: .github/labeler-config-srvaroa.yml
           use_local_config: false
