--- a/.github/workflows/ai-pr-title-request.yml
+++ b/.github/workflows/ai-pr-title-request.yml
@@ -21,6 +21,8 @@ jobs:
         with:
           egress-policy: audit
       - uses: actions/checkout@v4
+        with:
+            fetch-depth: 0
 
       - name: Extract PR metadata
         run: |
@@ -28,7 +30,9 @@ jobs:
           echo "${{ github.event.pull_request.number }}" > meta/PR.txt
           echo "${{ github.event.pull_request.title }}" > meta/title.txt
           git fetch origin ${{ github.base_ref }}
-          git diff origin/${{ github.base_ref }}...HEAD > meta/diff.txt
+          git fetch origin ${{ github.base_ref }}
+          git fetch origin ${{ github.head_ref }}
+          git diff origin/${{ github.base_ref }}..origin/${{ github.head_ref }} > meta/diff.txt
 
       - uses: actions/upload-artifact@v4
         with:
