--- a/.github/workflows/PR-Demo-Comment-with-react.yml
+++ b/.github/workflows/PR-Demo-Comment-with-react.yml
@@ -41,3 +41,12 @@ jobs:
             echo "❌ $COMMENT_USER is not authorized to deploy" >&2
             exit 1
           fi
+        continue-on-error: true
+
+      - name: Trigger Deployment
+        if: success()  # Only run if the previous step succeeded
+        run: |
+          echo "🚀 Deployment triggered by ${{ github.event.comment.user.login }}!"
+          # Here you would add the actual deployment logic, e.g., calling a script or API
+          # ./deploy_script.sh
+          echo "Deployment logic goes here."
