--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -1,8 +1,8 @@
 name: AI - PR Title Review
 
 on:
-  pull_request:
-    types: [opened, synchronize, edited]
+  pull_request_target:
+    types: [opened, edited]
     branches: [main]
 
 permissions:  # required for secure-repo hardening
@@ -67,7 +67,7 @@ jobs:
         id: get_diff
         run: |
           git fetch origin ${{ github.base_ref }}
-          git diff origin/${{ github.base_ref }}...HEAD > pr.diff
+          git diff origin/${{ github.base_ref }}...HEAD | head -n 10000 | grep -vP '[\x00-\x08\x0B\x0C\x0E-\x1F\x7F\x{202E}\x{200B}]' > pr.diff
           echo "diff<<EOF" >> $GITHUB_OUTPUT
           cat pr.diff >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
