--- a/.github/workflows/reviewbot.yml
+++ b/.github/workflows/reviewbot.yml
@@ -8,7 +8,7 @@ jobs:
   approve-pr:
     if: |
       github.event.issue.pull_request &&
-      contains(github.event.comment.body, 'reviewbot')
+      contains(github.event.comment.body, 'approvebot')
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write # wichtig für das Abgeben eines Reviews
@@ -59,4 +59,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.setup-bot.outputs.token }}
         run: |
-          gh pr review ${{ github.event.issue.number }} --approve
+          gh pr review ${{ github.event.issue.number }} --approve -b "${{ steps.setup-bot.outputs.app-slug }}[bot] approved this PR in response to a comment from @${{ github.actor }}."
