--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -75,14 +75,17 @@ jobs:
 
       - name: Check if PR diff is empty
         if: steps.actor.outputs.is_repo_dev == 'true'
+        id: check_diff
         run: |
           if [ ! -s pr.diff ]; then
             echo "PR diff is empty. Skipping AI title review." >&2
-            echo "is_repo_dev=false" >> $GITHUB_OUTPUT
+            echo "is_empty=false" >> $GITHUB_OUTPUT
+            exit 0
           fi
+          echo "is_empty=true" >> $GITHUB_OUTPUT
 
       - name: Check and sanitize PR title
-        if: steps.actor.outputs.is_repo_dev == 'true'
+        if: steps.check_diff.outputs.is_empty == 'true'
         id: sanitize_pr_title
         env:
           PR_TITLE_RAW: ${{ github.event.pull_request.title }}
@@ -95,7 +98,7 @@ jobs:
           echo "pr_title=$PR_TITLE" >> $GITHUB_OUTPUT
 
       - name: AI PR Title Analysis
-        if: steps.actor.outputs.is_repo_dev == 'true'
+        if: steps.check_diff.outputs.is_empty == 'true'
         id: ai-title-analysis
         uses: actions/ai-inference@d645f067d89ee1d5d736a5990e327e504d1c5a4a # v1.1.0
         with:
@@ -117,7 +120,7 @@ jobs:
             }
 
       - name: Validate and set SCRIPT_OUTPUT
-        if: steps.actor.outputs.is_repo_dev == 'true'
+        if: steps.check_diff.outputs.is_empty == 'true'
         run: |
           cat <<EOF > ai_response.json
           ${{ steps.ai-title-analysis.outputs.response }}
@@ -167,7 +170,7 @@ jobs:
           echo '```' >> $GITHUB_STEP_SUMMARY
 
       - name: Post comment on PR if needed
-        if: steps.actor.outputs.is_repo_dev == 'true'
+        if: steps.check_diff.outputs.is_empty == 'true'
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7.0.1
         continue-on-error: true
         with:
