--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -3,6 +3,8 @@ name: AI - PR Title Review
 on:
   pull_request_target:
     types: [opened, edited]
+  pull_request:
+    types: [opened, edited]
 
 permissions:  # required for secure-repo hardening
   contents: read
