--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -103,7 +103,7 @@ jobs:
         uses: actions/ai-inference@d645f067d89ee1d5d736a5990e327e504d1c5a4a # v1.1.0
         with:
           token: ${{ steps.setup-bot.outputs.token }}
-          # model: openai/gpt-4.1
+          model: xai/grok-3-mini
           system-prompt-file: ".github/config/system-prompt.txt"
           prompt: |
             Based on the following input data:
