--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -1,7 +1,7 @@
 name: AI - PR Title Review
 
 on:
-  pull_request_target:
+  pull_request:
     types: [opened, edited]
 
 permissions:  # required for secure-repo hardening
