--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -4,7 +4,7 @@ on:
   pull_request_target:
     types: [opened, edited]
 
-permissions:  # required for secure-repo hardening
+permissions: # required for secure-repo hardening
   contents: read
 
 jobs:
@@ -25,7 +25,6 @@ jobs:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
-          ref: ${{ github.base_ref }}
 
       - name: Configure Git to suppress detached HEAD warning
         run: git config --global advice.detachedHead false
@@ -67,10 +66,9 @@ jobs:
         if: steps.actor.outputs.is_repo_dev == 'true'
         id: get_diff
         run: |
-          echo "Base ref: ${{ github.base_ref }}"
-          echo "Head SHA: ${{ github.event.pull_request.head.sha }}"
-          git fetch origin ${{ github.base_ref }} || { echo "Fehler beim Abrufen von origin/${{ github.base_ref }}"; exit 1; }
-          git diff origin/${{ github.base_ref }}...${{ github.event.pull_request.head.sha }} > raw_diff.txt || { echo "Fehler bei git diff"; exit 1; }
+          echo "Fetching diff for PR #${{ github.event.pull_request.number }}"
+          curl -s -H "Authorization: Bearer ${{ steps.setup-bot.outputs.token }}" \
+            https://patch-diff.githubusercontent.com/raw/${{ github.repository }}/pull/${{ github.event.pull_request.number }}.diff > raw_diff.txt || { echo "Fehler beim Abrufen des Diffs"; exit 1; }
           head -n 10000 raw_diff.txt > trimmed_diff.txt || { echo "Fehler bei head"; exit 1; }
           grep -vP '[\x00-\x08\x0B\x0C\x0E-\x1F\x7F\x{202E}\x{200B}]' trimmed_diff.txt > pr.diff || { echo "Fehler bei grep"; exit 1; }
           wc -l pr.diff
