--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -72,7 +72,11 @@ jobs:
           head -n 10000 raw_diff.txt > trimmed_diff.txt || { echo "Fehler bei head"; exit 1; }
           grep -vP '[\x00-\x08\x0B\x0C\x0E-\x1F\x7F\x{202E}\x{200B}]' trimmed_diff.txt > pr.diff || { echo "Fehler bei grep"; exit 1; }
           wc -l pr.diff
+          echo '```bash' >> $GITHUB_STEP_SUMMARY
           cat pr.diff >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          # Setze die Ausgabe 'diff'
+          echo "diff=$(cat pr.diff)" >> $GITHUB_OUTPUT
         continue-on-error: true
 
       - name: Check if PR diff is empty
