--- a/.github/workflows/ai_pr_title_review.yml
+++ b/.github/workflows/ai_pr_title_review.yml
@@ -67,16 +67,20 @@ jobs:
         id: get_diff
         run: |
           echo "Fetching diff for PR #${{ github.event.pull_request.number }}"
+          echo "Repository: ${{ github.repository }}"
+          echo "PR URL: https://patch-diff.githubusercontent.com/raw/${{ github.repository }}/pull/${{ github.event.pull_request.number }}.diff"
           curl -s -H "Authorization: Bearer ${{ steps.setup-bot.outputs.token }}" \
             https://patch-diff.githubusercontent.com/raw/${{ github.repository }}/pull/${{ github.event.pull_request.number }}.diff > raw_diff.txt || { echo "Fehler beim Abrufen des Diffs"; exit 1; }
+          echo "Raw diff size: $(wc -l raw_diff.txt)"
           head -n 10000 raw_diff.txt > trimmed_diff.txt || { echo "Fehler bei head"; exit 1; }
+          echo "Trimmed diff size: $(wc -l trimmed_diff.txt)"
           grep -vP '[\x00-\x08\x0B\x0C\x0E-\x1F\x7F\x{202E}\x{200B}]' trimmed_diff.txt > pr.diff || { echo "Fehler bei grep"; exit 1; }
-          wc -l pr.diff
+          echo "Filtered diff size: $(wc -l pr.diff)"
+          echo "Content of pr.diff:"
+          cat pr.diff
           echo '```bash' >> $GITHUB_STEP_SUMMARY
           cat pr.diff >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
-          # Setze die Ausgabe 'diff'
-          echo "diff=$(cat pr.diff)" >> $GITHUB_OUTPUT
         continue-on-error: true
 
       - name: Check if PR diff is empty
@@ -114,7 +118,7 @@ jobs:
             Based on the following input data:
 
             {
-              "diff": "${{ steps.get_diff.outputs.diff }}",
+              "diff": "$(cat pr.diff)",
               "pr_title": "${{ steps.sanitize_pr_title.outputs.pr_title }}"
             }
 
