--- a/.github/workflows/PR-Demo-Comment-with-react.yml
+++ b/.github/workflows/PR-Demo-Comment-with-react.yml
@@ -44,6 +44,9 @@ jobs:
         with:
           egress-policy: audit
 
+      - name: Checkout PR
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
       - name: Setup GitHub App Bot
         if: github.actor != 'dependabot[bot]'
         id: setup-bot
